syntax = "proto3";
package topchain.provider;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "topchain/provider/params.proto";
import "topchain/requester/subscription.proto";

option go_package = "topchain/x/provider/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/topchain/provider/params";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QuerySubscriptionStatusRequest {
  string subscription_id = 1;
}

message QuerySubscriptionStatusResponse {
  string subscription_id = 1;
}

message QuerySubscriptionsRequest {
  string provider = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QuerySubscriptionsResponse {
  repeated topchain.requester.Subscription subscriptions = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
